--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^2.6.5",
     "mavon-editor": "^2.9.0",
     "vue": "^2.6.10",
