--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mavon-editor": "^2.9.0",
     "vue": "^2.6.10",
     "vue-codemirror": "^4.0.6",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.4.9",
     "vuetify": "^2.2.11"
   },
